# text-viwer

./: README.md  com.github.SamuelSchlemper.textViwer.json  meson.build
data/: com.github.SamuelSchlemper.textViwer.desktop.in  com.github.SamuelSchlemper.textViwer.gschema.xml  com.github.SamuelSchlemper.textViwer.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  text-viwer.gresource.xml  text-viwer.in  window.py  window.ui
